Refactor: Standardize Unity Catalog naming to ecommerce_platform and split Day 3 workshops

--- a/DZIEN_1_Fundamentals_Exploration/05_views.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/05_views.ipynb
@@ -16,7 +16,7 @@
     }
    },
    "source": [
-    "# Widoki i podstawowe workflow w Databricks - Demo\n",
+    "# Widoki w Databricks - Demo\n",
     "\n",
     "**Cel szkoleniowy:** Nauczenie się różnic między widokami a tabelami, zarządzania obiektami w Unity Catalog oraz tworzenia prostych pipeline'ów notebookowych w Databricks Jobs.\n",
     "\n",
