--- a/00_setup.ipynb
+++ b/00_setup.ipynb
@@ -15,7 +15,16 @@
    "source": [
     "# Inicjalizacja kontekstu użytkownika\n",
     "\n",
-    "Cel: izolacja zasobów dla każdego uczestnika. Tworzone są schematy per użytkownik w katalogu `training_catalog`: `<user_slug>_bronze`, `<user_slug>_silver`, `<user_slug>_gold`. Uruchom tę komórkę przed dalszymi krokami w innych notebookach."
+    "**Cel**: Konfiguracja środowiska i izolacja zasobów.\n",
+    "\n",
+    "Skrypt realizuje strategię **Catalog Isolation** (rekomendowana):\n",
+    "1.  Tworzy dedykowany katalog dla użytkownika: `ecommerce_platform_<user_slug>` (np. `ecommerce_platform_kzb`).\n",
+    "2.  Wewnątrz katalogu tworzy standardowe schematy warstw: `bronze`, `silver`, `gold`.\n",
+    "3.  Ustawia zmienne globalne (`CATALOG`, `BRONZE_SCHEMA` itp.) używane w notebookach.\n",
+    "\n",
+    "*Jeśli użytkownik nie ma uprawnień do tworzenia katalogów, skrypt automatycznie przełączy się na tryb izolacji schematami w katalogu `ecommerce_platform`.*\n",
+    "\n",
+    "**Uruchom tę komórkę raz na początku sesji.**"
    ]
   },
   {
@@ -42,10 +51,10 @@
     "- **Przykład**: `spark.read.csv(f\"{DATASET_BASE_PATH}/customers/customers.csv\")`\n",
     "\n",
     "### Dzień 3: Unity Catalog Volumes\n",
-    "- **Źródło**: Unity Catalog Volumes (`/Volumes/training_catalog/default/kion_datasets`)\n",
+    "- **Źródło**: Unity Catalog Volumes (`/Volumes/ecommerce_platform_<user>/default/kion_datasets`)\n",
     "- **Zmienna**: `VOLUMES_BASE_PATH` (opcjonalne dla Dzień 3)\n",
     "- **Cel**: Demonstracja zaawansowanych feature'ów UC (DLT, Lakeflow, Governance)\n",
-    "- **Przykład**: `spark.read.csv(\"/Volumes/training_catalog/default/kion_datasets/customers.csv\")`\n",
+    "- **Przykład**: `spark.read.csv(\"/Volumes/ecommerce_platform_kzb/default/kion_datasets/customers.csv\")`\n",
     "\n",
     "### Dlaczego dwa podejścia?\n",
     "- **Progresja edukacyjna**: Od prostych plików (Dzień 1) → Delta Lake (Dzień 2) → Unity Catalog (Dzień 3)\n",
@@ -81,8 +90,6 @@
    "outputs": [],
    "source": [
     "# === Konfiguracja katalogów i schematów ===\n",
-    "CATALOG = \"training_catalog\"\n",
-    "\n",
     "# Pobierz aktualnego użytkownika (dla środowiska produkcyjnego)\n",
     "# raw_user = spark.sql(\"SELECT current_user()\").first()[0]\n",
     "raw_user = \"trainer\"  # Dla środowiska szkoleniowego\n",
@@ -96,10 +103,24 @@
     "\n",
     "print(f\"User slug: {user_slug}\")\n",
     "\n",
-    "# Schematy per użytkownik (izolacja zasobów)\n",
-    "BRONZE_SCHEMA = f\"{user_slug}_bronze\"\n",
-    "SILVER_SCHEMA = f\"{user_slug}_silver\"\n",
-    "GOLD_SCHEMA   = f\"{user_slug}_gold\"\n",
+    "# --- KONFIGURACJA ARCHITEKTURY ---\n",
+    "# Wybór strategii izolacji: 'CATALOG' (rekomendowana) lub 'SCHEMA' (fallback)\n",
+    "ISOLATION_MODE = 'CATALOG' \n",
+    "\n",
+    "if ISOLATION_MODE == 'CATALOG':\n",
+    "    # Opcja 1: Izolacja Katalogami (Czysty kod: FROM bronze.orders)\n",
+    "    # Wymaga uprawnień CREATE CATALOG\n",
+    "    CATALOG = f\"ecommerce_platform_{user_slug}\"\n",
+    "    BRONZE_SCHEMA = \"bronze\"\n",
+    "    SILVER_SCHEMA = \"silver\"\n",
+    "    GOLD_SCHEMA   = \"gold\"\n",
+    "else:\n",
+    "    # Opcja 2: Izolacja Schematami (Wspólny katalog: FROM user_bronze.orders)\n",
+    "    # Łatwiejsze uprawnienia\n",
+    "    CATALOG = \"ecommerce_platform\"\n",
+    "    BRONZE_SCHEMA = f\"{user_slug}_bronze\"\n",
+    "    SILVER_SCHEMA = f\"{user_slug}_silver\"\n",
+    "    GOLD_SCHEMA   = f\"{user_slug}_gold\"\n",
     "\n",
     "# === Ścieżka do datasetów ===\n",
     "# Dla lokalnego środowiska - ścieżka do folderu dataset w tym repo\n",
@@ -107,23 +128,33 @@
     "#DATASET_BASE_PATH = os.path.abspath(\"../dataset\")\n",
     "\n",
     " #Dla Databricks środowiska - Unity Catalog Volume:\n",
-    "DATASET_BASE_PATH = \"/Volumes/training_catalog/default/kion_datasets\"\n",
+    "# Zakładamy, że dane źródłowe są we wspólnym katalogu 'training_sources' lub podobnym\n",
+    "# Tutaj dla uproszczenia używamy katalogu użytkownika, ale w realnym scenariuszu byłby to read-only shared volume\n",
+    "DATASET_BASE_PATH = f\"/Volumes/{CATALOG}/default/kion_datasets\"\n",
     "\n",
     "\n",
     "print(f\"Dataset base path: {DATASET_BASE_PATH}\")\n",
     "\n",
     "# === Tworzenie katalogów i schematów (tylko w Databricks) ===\n",
     "try:\n",
+    "    if ISOLATION_MODE == 'CATALOG':\n",
+    "        print(f\"Creating/Using Catalog: {CATALOG}...\")\n",
+    "        spark.sql(f\"CREATE CATALOG IF NOT EXISTS {CATALOG}\")\n",
+    "    \n",
     "    spark.sql(f'USE CATALOG {CATALOG}')\n",
     "    \n",
     "    for s in [BRONZE_SCHEMA, SILVER_SCHEMA, GOLD_SCHEMA]:\n",
     "        spark.sql(f'CREATE SCHEMA IF NOT EXISTS {CATALOG}.{s}')\n",
     "    \n",
+    "    # Opcjonalnie: Utwórz wolumen na dane jeśli nie istnieje (dla celów szkoleniowych)\n",
+    "    spark.sql(f\"CREATE SCHEMA IF NOT EXISTS {CATALOG}.default\")\n",
+    "    # spark.sql(f\"CREATE VOLUME IF NOT EXISTS {CATALOG}.default.kion_datasets\") \n",
+    "    \n",
     "    spark.sql(f'USE SCHEMA {BRONZE_SCHEMA}')\n",
-    "    print(\"✓ Unity Catalog schemas created successfully\")\n",
+    "    print(\"✓ Unity Catalog resources created successfully\")\n",
     "except Exception as e:\n",
-    "    print(f\"⚠ Unity Catalog not available or not configured: {e}\")\n",
-    "    print(\"Continuing with default database...\")\n",
+    "    print(f\"⚠ Error configuring Unity Catalog: {e}\")\n",
+    "    print(\"Ensure you have CREATE CATALOG or CREATE SCHEMA permissions.\")\n",
     "\n",
     "# === Wyświetl informacje o katalogu ===\n",
     "print(\"\\n=== Informacje o katalogu ===\")\n",
@@ -131,8 +162,7 @@
     "    spark.sql(f\"DESCRIBE CATALOG EXTENDED {CATALOG}\")\n",
     ")\n",
     "\n",
-    "# === Podsumowanie konfiguracji ===\n",
-    "print(\"\\n=== Podsumowanie konfiguracji użytkownika ===\")\n",
+    "# === Podsumowanie konfiguracji użytkownika ===\")\n",
     "display(\n",
     "    spark.createDataFrame(\n",
     "        [\n",
@@ -149,10 +179,9 @@
     ")\n",
     "\n",
     "print(\"\\n✓ Inicjalizacja zakończona pomyślnie!\")\n",
-    "print(f\"✓ Użytkownik: {raw_user}\")\n",
-    "print(f\"✓ Katalog: {CATALOG}\")\n",
-    "print(f\"✓ Schematy: {BRONZE_SCHEMA}, {SILVER_SCHEMA}, {GOLD_SCHEMA}\")\n",
-    "print(f\"✓ Ścieżka do danych: {DATASET_BASE_PATH}\")\n"
+    "print(f\"✓ Tryb izolacji: {ISOLATION_MODE}\")\n",
+    "print(f\"✓ Katalog roboczy: {CATALOG}\")\n",
+    "print(f\"✓ Schematy: {BRONZE_SCHEMA}, {SILVER_SCHEMA}, {GOLD_SCHEMA}\")\n"
    ]
   }
  ],
