--- a/00_setup.ipynb
+++ b/00_setup.ipynb
@@ -76,14 +76,7 @@
      "inputWidgets": {},
      "nuid": "8e047da8-3e6c-46d1-9153-094034c7a9d4",
      "showTitle": false,
-     "tableResultSettingsMap": {
-      "1": {
-       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{\"dataset_path\":322},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1763579086288}",
-       "filterBlob": null,
-       "queryPlanFiltersBlob": null,
-       "tableResultIndex": 1
-      }
-     },
+     "tableResultSettingsMap": {},
      "title": ""
     }
    },
@@ -101,84 +94,39 @@
     "    raw_user.lower()\n",
     ")\n",
     "\n",
-    "print(f\"User slug: {user_slug}\")\n",
     "\n",
-    "# --- KONFIGURACJA ARCHITEKTURY ---\n",
-    "# Wybór strategii izolacji: 'CATALOG' (rekomendowana) lub 'SCHEMA' (fallback)\n",
-    "ISOLATION_MODE = 'CATALOG' \n",
+    "# Opcja 1: Izolacja Katalogami (Czysty kod: FROM bronze.orders)\n",
+    "# Wymaga uprawnień CREATE CATALOG\n",
+    "CATALOG = f\"ecommerce_platform_{user_slug}\"\n",
+    "BRONZE_SCHEMA = \"bronze\"\n",
+    "SILVER_SCHEMA = \"silver\"\n",
+    "GOLD_SCHEMA   = \"gold\"\n",
     "\n",
-    "if ISOLATION_MODE == 'CATALOG':\n",
-    "    # Opcja 1: Izolacja Katalogami (Czysty kod: FROM bronze.orders)\n",
-    "    # Wymaga uprawnień CREATE CATALOG\n",
-    "    CATALOG = f\"ecommerce_platform_{user_slug}\"\n",
-    "    BRONZE_SCHEMA = \"bronze\"\n",
-    "    SILVER_SCHEMA = \"silver\"\n",
-    "    GOLD_SCHEMA   = \"gold\"\n",
-    "else:\n",
-    "    # Opcja 2: Izolacja Schematami (Wspólny katalog: FROM user_bronze.orders)\n",
-    "    # Łatwiejsze uprawnienia\n",
-    "    CATALOG = \"ecommerce_platform\"\n",
-    "    BRONZE_SCHEMA = f\"{user_slug}_bronze\"\n",
-    "    SILVER_SCHEMA = f\"{user_slug}_silver\"\n",
-    "    GOLD_SCHEMA   = f\"{user_slug}_gold\"\n",
-    "\n",
-    "# === Ścieżka do datasetów ===\n",
-    "# Dla lokalnego środowiska - ścieżka do folderu dataset w tym repo\n",
-    "#import os\n",
-    "#DATASET_BASE_PATH = os.path.abspath(\"../dataset\")\n",
     "\n",
     " #Dla Databricks środowiska - Unity Catalog Volume:\n",
     "# Zakładamy, że dane źródłowe są we wspólnym katalogu 'training_sources' lub podobnym\n",
     "# Tutaj dla uproszczenia używamy katalogu użytkownika, ale w realnym scenariuszu byłby to read-only shared volume\n",
-    "DATASET_BASE_PATH = f\"/Volumes/{CATALOG}/default/kion_datasets\"\n",
+    "DATASET_BASE_PATH = f\"/Volumes/ecommerce_platform_trainer/default/kion_datasets\"\n",
     "\n",
     "\n",
     "print(f\"Dataset base path: {DATASET_BASE_PATH}\")\n",
     "\n",
-    "# === Tworzenie katalogów i schematów (tylko w Databricks) ===\n",
-    "try:\n",
-    "    if ISOLATION_MODE == 'CATALOG':\n",
-    "        print(f\"Creating/Using Catalog: {CATALOG}...\")\n",
-    "        spark.sql(f\"CREATE CATALOG IF NOT EXISTS {CATALOG}\")\n",
+    "spark.sql(f'USE CATALOG {CATALOG}')\n",
     "    \n",
-    "    spark.sql(f'USE CATALOG {CATALOG}')\n",
+    "for s in [BRONZE_SCHEMA, SILVER_SCHEMA, GOLD_SCHEMA]:\n",
+    "    spark.sql(f'CREATE SCHEMA IF NOT EXISTS {CATALOG}.{s}')\n",
     "    \n",
-    "    for s in [BRONZE_SCHEMA, SILVER_SCHEMA, GOLD_SCHEMA]:\n",
-    "        spark.sql(f'CREATE SCHEMA IF NOT EXISTS {CATALOG}.{s}')\n",
+    "# Opcjonalnie: Utwórz wolumen na dane jeśli nie istnieje (dla celów szkoleniowych)\n",
+    "spark.sql(f\"CREATE SCHEMA IF NOT EXISTS {CATALOG}.default\")\n",
+    "# spark.sql(f\"CREATE VOLUME IF NOT EXISTS {CATALOG}.default.kion_datasets\") \n",
     "    \n",
-    "    # Opcjonalnie: Utwórz wolumen na dane jeśli nie istnieje (dla celów szkoleniowych)\n",
-    "    spark.sql(f\"CREATE SCHEMA IF NOT EXISTS {CATALOG}.default\")\n",
-    "    # spark.sql(f\"CREATE VOLUME IF NOT EXISTS {CATALOG}.default.kion_datasets\") \n",
-    "    \n",
-    "    spark.sql(f'USE SCHEMA {BRONZE_SCHEMA}')\n",
-    "    print(\"✓ Unity Catalog resources created successfully\")\n",
-    "except Exception as e:\n",
-    "    print(f\"⚠ Error configuring Unity Catalog: {e}\")\n",
-    "    print(\"Ensure you have CREATE CATALOG or CREATE SCHEMA permissions.\")\n",
     "\n",
-    "# === Wyświetl informacje o katalogu ===\n",
-    "print(\"\\n=== Informacje o katalogu ===\")\n",
     "display(\n",
     "    spark.sql(f\"DESCRIBE CATALOG EXTENDED {CATALOG}\")\n",
     ")\n",
     "\n",
-    "# === Podsumowanie konfiguracji użytkownika ===\")\n",
-    "display(\n",
-    "    spark.createDataFrame(\n",
-    "        [\n",
-    "            (\n",
-    "                raw_user, \n",
-    "                f'{CATALOG}.{BRONZE_SCHEMA}', \n",
-    "                f'{CATALOG}.{SILVER_SCHEMA}', \n",
-    "                f'{CATALOG}.{GOLD_SCHEMA}',\n",
-    "                DATASET_BASE_PATH\n",
-    "            )\n",
-    "        ],\n",
-    "        ['user', 'bronze_schema', 'silver_schema', 'gold_schema', 'dataset_path']\n",
-    "    )\n",
-    ")\n",
     "\n",
-    "print(\"\\n✓ Inicjalizacja zakończona pomyślnie!\")\n",
+    "print(f\"✓ User slug: {user_slug}\")\n",
     "print(f\"✓ Tryb izolacji: {ISOLATION_MODE}\")\n",
     "print(f\"✓ Katalog roboczy: {CATALOG}\")\n",
     "print(f\"✓ Schematy: {BRONZE_SCHEMA}, {SILVER_SCHEMA}, {GOLD_SCHEMA}\")\n"
