--- a/DZIEN_1_Fundamentals_Exploration/01_databricks_lakehouse_intro.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/01_databricks_lakehouse_intro.ipynb
@@ -182,8 +182,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6be0ad0d-871c-49b0-ae7c-b5423e4ab8a2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Ustaw katalog jako domyślny\n",
@@ -384,24 +396,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Hierarchia Unity Catalog:**\n",
-    "\n",
-    "```text\n",
-    "Metastore\n",
-    "  ├── Catalog (np. main, dev, prod)\n",
-    "  │   ├── Schema/Database (np. bronze, silver, gold)\n",
-    "  │   │   ├── Tables (Delta Tables)\n",
-    "  │   │   ├── Views (SQL Views)\n",
-    "  │   │   ├── Functions (UDFs)\n",
-    "  │   │   └── Volumes (dla plików)\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0069c11c-67d5-4a54-a1a7-fbb67f5d80e6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "**Hierarchia Unity Catalog:**\n",
     "\n",
@@ -722,7 +729,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "92b57d4d-6aa9-4bdf-9bea-0b239e059ad5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "**Konfiguracja klastra:**\n",
     "\n",
@@ -731,8 +750,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e683c880-a33e-42c3-a526-c6da591bc240",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "print(f\"Spark Version: {spark_version}\")\n",
@@ -900,6 +931,7 @@
     "- **%sh**: Polecenia shell\n",
     "- **%run**: Uruchomienie innego notebooka (jak import)\n",
     "- **%pip**: Instalacja bibliotek Python (notebook-scoped)\n",
+    "- **%skip**: Skipuje komorke\n",
     "\n",
     "**Zastosowanie praktyczne:**\n",
     "- Łączenie SQL i Python w jednym workflow\n",
@@ -1027,7 +1059,7 @@
     }
    },
    "source": [
-    "### Przykład 4.2: File System operations z %fs\n",
+    "### Przykład 4.2: File System operations z fs\n",
     "\n",
     "**Cel:** Eksploracja systemu plików DBFS"
    ]
@@ -1050,7 +1082,6 @@
    },
    "outputs": [],
    "source": [
-    "# Magic command %fs dla operacji na plikach\n",
     "# Lista katalogów głównych w DBFS\n",
     "dbutils.fs.ls(\"/\")"
    ]
@@ -1135,18 +1166,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Rejestracja jako temp view dla dostępu z SQL\n",
-    "df.createOrReplaceTempView(\"employees_temp\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "289d1ce0-479b-47f5-9e30-50c09b90c688",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Utworzenie DataFrame\n",
@@ -1155,8 +1188,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e34557e1-9ac9-4f3a-88c9-3f40d3c8426f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Rejestracja jako temp view dla dostępu z SQL\n",
+    "df.createOrReplaceTempView(\"employees_temp\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4071b2d3-e8f0-4027-a850-c18c2fc7b71a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "**Temp view utworzony: employees_temp**\n",
     "\n",
@@ -1217,28 +1284,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import emoji\n",
-    "print(emoji.emojize('Databricks is :fire:'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Instalacja biblioteki emoji\n",
-    "%pip install emoji"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1ef0c1cd-1d7c-4fad-910b-8087ab6fc581",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 4.4: Zarządzanie bibliotekami (%pip)\n",
     "\n",
@@ -1246,8 +1305,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7b998dba-508e-4ee7-a9a5-96f8419efe33",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Instalacja biblioteki emoji\n",
+    "%pip install emoji"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "731f59a0-93e7-4245-b94e-504b7b0c5bfc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import emoji\n",
+    "print(emoji.emojize('Databricks is :fire:'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c6662cc7-46a9-4f65-915a-18079ed97f68",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Sekcja 4.5: Databricks Assistant (AI)\n",
     "\n",
@@ -1263,6 +1378,22 @@
     "- **Fixing errors**: Gdy komórka zwróci błąd, kliknij \"Diagnose Error\" – asystent wyjaśni przyczynę i zaproponuje poprawkę.\n",
     "- **Transformacja**: \"Przepisz ten kod z PySpark na SQL\"."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d5d45e64-069d-4a60-b9b7-8d3fcb777f7e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1327,7 +1458,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4ff6cc60-b5c6-4119-849f-76a3c175f19b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "**Hive Metastore (legacy)**\n",
     "\n",
@@ -1338,7 +1481,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4da5a2ba-76c0-4230-b5ee-a5a47656beb0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "**Unity Catalog (nowoczesny)**\n",
     "\n",
@@ -1406,19 +1561,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Utworzenie DataFrame\n",
-    "demo_df = spark.createDataFrame(demo_data, demo_schema)\n",
-    "display(demo_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "fd8f2775-8274-4791-ab51-d147a1be2078",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Definicja schematu\n",
@@ -1428,6 +1584,29 @@
     "    StructField(\"status\", StringType(), False),\n",
     "    StructField(\"date\", StringType(), False)\n",
     "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a60aa549-2b4b-4714-944c-49cd6ab52d59",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Utworzenie DataFrame\n",
+    "demo_df = spark.createDataFrame(demo_data, demo_schema)\n",
+    "display(demo_df)"
    ]
   },
   {
@@ -1458,8 +1637,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1506a541-232b-4b70-b15e-17fe667a9944",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Weryfikacja\n",
@@ -1468,14 +1659,38 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "17ffb9ec-997d-4305-affd-991831d89bfa",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "**Sukces!** Tabela została utworzona w Unity Catalog. Możemy teraz zweryfikować jej istnienie."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "490272be-2a84-46e2-a66d-0d6d1d573ff8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### 🎯 Zadanie: Sprawdź w UI\n",
     "\n",
@@ -1518,7 +1733,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "dfeca6d4-c870-4788-aa01-7dfe3acc3780",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Bonus: Delta Time Travel (Teaser)\n",
     "\n",
@@ -1527,12 +1754,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f56ed7b3-67af-47e2-821a-abcabe4a484c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display(spark.sql(f\"DESCRIBE HISTORY {CATALOG}.{BRONZE_SCHEMA}.lakehouse_demo\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3e16fc12-df73-414e-af57-a9002b9a34c9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "%sql\n",
-    "DESCRIBE HISTORY ${CATALOG}.${BRONZE_SCHEMA}.lakehouse_demo"
+    "DESCRIBE HISTORY ecommerce_platform_trainer.bronze.lakehouse_demo"
    ]
   },
   {
@@ -1585,8 +1847,8 @@
     "  table_name,\n",
     "  table_type\n",
     "FROM system.information_schema.tables\n",
-    "WHERE table_catalog = '${CATALOG}'\n",
-    "  AND table_schema = '${BRONZE_SCHEMA}'\n",
+    "WHERE table_catalog = 'ecommerce_platform_trainer'\n",
+    "  AND table_schema = 'bronze'\n",
     "ORDER BY table_name"
    ]
   },
@@ -1657,21 +1919,7 @@
    "source": [
     "# Podejście PySpark - programatyczne DataFrame API\n",
     "\n",
-    "df_pyspark = spark.table(f\"{CATALOG}.{BRONZE_SCHEMA}.lakehouse_demo\")\n",
-    "\n",
-    "result_pyspark = df_pyspark \\\n",
-    "    .filter(F.col(\"status\") == \"Enabled\") \\\n",
-    "    .select(\"feature\", \"status\", \"date\") \\\n",
-    "    .orderBy(\"feature\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(result_pyspark)"
+    "df_pyspark = spark.table(f\"{CATALOG}.{BRONZE_SCHEMA}.lakehouse_demo\")"
    ]
   },
   {
@@ -1684,7 +1932,31 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "6c101550-b0db-4b2a-bb8b-5656a2b43c5b",
+     "nuid": "bf9b31f8-ef80-4b2c-9d88-4a7106d1f7c0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "result_pyspark = df_pyspark \\\n",
+    "    .filter(F.col(\"status\") == \"Enabled\") \\\n",
+    "    .select(\"feature\", \"status\", \"date\") \\\n",
+    "    .orderBy(\"feature\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "dd1e2252-4c73-4961-b13c-e88b905ec60f",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -1736,8 +2008,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "96b7c9b1-a1a1-4c15-b6df-8249cd755b2e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "\n",
+    "select * from \n",
+    "ecommerce_platform_trainer.bronze.lakehouse_demo"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "169a685d-24ac-4f56-b608-8a240f2cd18f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Parametryzacja z Databricks Widgets\n",
     "\n",
@@ -2044,7 +2353,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7274734306713371,
+     "commandId": 8151009896109070,
      "dataframes": [
       "_sqldf"
      ]
@@ -2054,55 +2363,55 @@
    "notebookName": "01_databricks_lakehouse_intro",
    "widgets": {
     "BRONZE_SCHEMA": {
-     "currentValue": "trainer_bronze",
+     "currentValue": "bronze",
      "nuid": "3eb823de-3328-4753-a2bf-9d863378b4f1",
      "typedWidgetInfo": {
       "autoCreated": false,
-      "defaultValue": "trainer_bronze",
+      "defaultValue": "bronze",
       "label": null,
       "name": "BRONZE_SCHEMA",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "defaultValue": "trainer_bronze",
+      "widgetType": "text",
+      "defaultValue": "bronze",
       "label": null,
       "name": "BRONZE_SCHEMA",
       "options": {
+       "widgetType": "text",
        "autoCreated": null,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     },
     "CATALOG": {
-     "currentValue": "training_catalog",
+     "currentValue": "ecommerce_platform_trainer",
      "nuid": "ab4cee0e-5693-4e7e-8e80-189b95567447",
      "typedWidgetInfo": {
       "autoCreated": false,
-      "defaultValue": "training_catalog",
+      "defaultValue": "ecommerce_platform_trainer",
       "label": null,
       "name": "CATALOG",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "defaultValue": "training_catalog",
+      "widgetType": "text",
+      "defaultValue": "ecommerce_platform_trainer",
       "label": null,
       "name": "CATALOG",
       "options": {
+       "widgetType": "text",
        "autoCreated": null,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     }
    }
